--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-Hello World!  This is the most basic of readme files… isn't this fun!!??
+Hello World!  This is the most basic of readme files… isn't this fun!!?? 
+If that really counts as "fun"
